Some Improvements in frontend
