# docs/openapi.yaml
@@ -335,6 +335,24 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/ApiResponseVoid"
+  /trade/history:
+    get:
+      tags:
+      - trade-controller
+      operationId: getUserTradeHistory
+      parameters:
+      - name: Authorization
+        in: header
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/ApiResponseListTradeDTO"
   /stock/{id}:
     get:
       tags:
@@ -906,6 +924,35 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/User"
+    ApiResponseListTradeDTO:
+      type: object
+      properties:
+        message:
+          type: string
+        object:
+          type: array
+          items:
+            $ref: "#/components/schemas/TradeDTO"
+    TradeDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        stockSymbol:
+          type: string
+        quantity:
+          type: integer
+          format: int64
+        price:
+          type: number
+        timestamp:
+          type: string
+          format: date-time
+        buyerUsername:
+          type: string
+        sellerUsername:
+          type: string
     ApiResponseStockDTO:
       type: object
       properties:
